// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoMetadata renders with view count 1`] = `
<div
  className="video-metadata"
>
  <h3>
    Video title
  </h3>
  <div
    className="video-stats"
  >
    <span>
      100,234
    </span>
    <div
      className="video-actions"
    >
      <Rating
        dislikeCount={200}
        likeCount={1000}
      />
      <Button
        as="button"
        basic={true}
        icon={true}
        labelPosition="left"
      >
        <Icon
          as="i"
          name="share"
        />
        Share
      </Button>
      <Button
        as="button"
        basic={true}
        icon={true}
      >
        <Icon
          as="i"
          name="add circle"
        />
      </Button>
      <Button
        as="button"
        basic={true}
        icon={true}
      >
        <Icon
          as="i"
          name="ellipsis horizontal"
        />
      </Button>
    </div>
  </div>
  <Divider />
</div>
`;

exports[`VideoMetadata renders without props 1`] = `
<div
  className="video-metadata"
>
  <h3>
    Video title
  </h3>
  <div
    className="video-stats"
  >
    <span>
      NaN
    </span>
    <div
      className="video-actions"
    >
      <Rating
        dislikeCount={200}
        likeCount={1000}
      />
      <Button
        as="button"
        basic={true}
        icon={true}
        labelPosition="left"
      >
        <Icon
          as="i"
          name="share"
        />
        Share
      </Button>
      <Button
        as="button"
        basic={true}
        icon={true}
      >
        <Icon
          as="i"
          name="add circle"
        />
      </Button>
      <Button
        as="button"
        basic={true}
        icon={true}
      >
        <Icon
          as="i"
          name="ellipsis horizontal"
        />
      </Button>
    </div>
  </div>
  <Divider />
</div>
`;
